--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -159,7 +159,7 @@ html {
           background: $base-color-blue;
         }
       }
-      &-danger {
+      &-error {
         background: $base-color-red;
         span {
           background: $base-color-red;
