--- a/template/api/index.hbs
+++ b/template/api/index.hbs
@@ -2,7 +2,7 @@ import request from '@/utils/request'
 
 export function getList(params) {
   return request({
-    url: '/{{ name }}/getList',
+    url: '/{{folderName}}/{{ filename }}/getList',
     method: 'get',
     params
   })
@@ -10,7 +10,7 @@ export function getList(params) {
 
 export function doEdit(data) {
   return request({
-    url: '/{{ name }}/doEdit',
+    url: '/{{folderName}}/{{ filename }}/doEdit',
     method: 'post',
     data
   })
@@ -18,7 +18,7 @@ export function doEdit(data) {
 
 export function doDelete(data) {
   return request({
-  url: '/{{ name }}/doDelete',
+  url: '/{{folderName}}/{{ filename }}/doDelete',
     method: 'post',
     data
   })
